working on configs

--- a/templates/snmpd.conf
+++ b/templates/snmpd.conf
@@ -58,7 +58,7 @@
 # from):
 
 #       sec.name  source          community
-com2sec readonly  localhost      poolpartycommunity
+com2sec readonly  localhost      <%= community_name %>
 #com2sec paranoid  default         public
 #com2sec readonly  default         public
 #com2sec readwrite default         private
