tweaks to have the configs work better

--- a/templates/cfg/apache.cfg
+++ b/templates/cfg/apache.cfg
@@ -8,7 +8,7 @@ LegendO[apache]: Hits:
 Legend2[apache]: Hits hour
 Legend4[apache]: Hits Hour max
 Title[apache]: Hits hour Apache
-PageTop[apache]: Hits Apache (all sites)
+PageTop[apache]: <h1>Hits Apache (all sites)</h1>
 WithPeak[apache]: wmy
 #------------End Apache Hits------------------
 
@@ -22,7 +22,7 @@ ShortLegend[apache_bytes]: o/s
 LegendO[apache_bytes]: Traffic Apache:
 Legend2[apache_bytes]: Traffic Apache
 Title[apache_bytes]: Traffic Apache
-PageTop[apache_bytes]: Traffic Apache
+PageTop[apache_bytes]: <h1>Traffic Apache</h1>
 WithPeak[apache_bytes]: wmy
 Legend4[apache_bytes]: Traffic max Apache
 #------------End Apache Traffic------------------
