--- a/templates/cfg/cpu.cfg
+++ b/templates/cfg/cpu.cfg
@@ -30,7 +30,7 @@ Legend2[cpu]: % CPU User + System
 LegendI[cpu]: User:
 LegendO[cpu]: Total:
 Title[cpu]: CPU
-PageTop[cpu]: CPU
+PageTop[cpu]: <h1>CPU</h1>
 WithPeak[cpu]:wmy
 Legend3[cpu]: Max % CPU User
 Legend4[cpu]: Max % CPU User + System
