--- a/templates/cfg/disk.cfg
+++ b/templates/cfg/disk.cfg
@@ -16,5 +16,5 @@ Legend2[sda1]: Space used
 LegendI[sda1]: Space Available:
 LegendO[sda1]: Space used:
 Title[sda1]: System disk space
-PageTop[sda1]: System disk space
+PageTop[sda1]: <h1>System disk space</h1>
 #--------end disk sda1----------------------------- --
