--- a/templates/cfg/memory.cfg
+++ b/templates/cfg/memory.cfg
@@ -11,7 +11,7 @@ Legend2[mem]: Memory used
 LegendI[mem]: Free Mem:
 LegendO[mem]: Mem used:
 Title[mem]: Memory
-PageTop[mem]: Memory
+PageTop[mem]: <h1>Memory</h1>
 WithPeak[mem]:wmy
 Legend3[mem]: Max memory
 Legend4[mem]: Max memory used
