--- a/templates/cfg/open_files.cfg
+++ b/templates/cfg/open_files.cfg
@@ -8,7 +8,7 @@ YLegend[files]: Files
 ShortLegend[files]: Files
 LegendO[files]:  Files:
 Legend2[files]: Number of open files
-PageTop[files]: Number of open files
+PageTop[files]: <h1>Number of open files</h1>
 WithPeak[files]: wmy
 Legend4[files]: Max number of open files
 #---- end open files
