--- a/templates/cfg/processes.cfg
+++ b/templates/cfg/processes.cfg
@@ -7,7 +7,7 @@ YLegend[procs]: Process
 ShortLegend[procs]: procs
 LegendO[procs]: Procs:
 Legend2[procs]: Number of Processes
-PageTop[procs]: Process
+PageTop[procs]: <h1>Process</h1>
 WithPeak[procs]:wmy
 Legend4[procs]: Max number of processes
 #------------End number of processes------------------
