--- a/templates/cfg/uptime.cfg
+++ b/templates/cfg/uptime.cfg
@@ -9,5 +9,5 @@ YLegend[uptime]: days
 ShortLegend[uptime]: days
 LegendO[uptime]: Uptime:
 Legend2[uptime]: Uptime in Linux-nonsense days
-PageTop[uptime]: Uptime in Linux-nonsense days
+PageTop[uptime]: <h1>Uptime in Linux-nonsense days</h1>
 #-------End uptime------------------------------
