updated configs to point to the right script

--- a/templates/cfg/cpu.cfg
+++ b/templates/cfg/cpu.cfg
@@ -19,7 +19,7 @@ LegendO[localhost.cpu]:
 Options[localhost.cpu]: growright,nopercent
 
 #---------CPU-------------------
-Target[cpu]: `<%= mrtg_bin_dir %>/cpustat`
+Target[cpu]: `<%= mrtg_bin_dir %>/cpustat.pl`
 Options[cpu]: nopercent,growright,gauge,noinfo, nobanner
 #Unscaled[cpu]:dwmy
 MaxBytes[cpu]: 100
