--- a/templates/cfg/disk.cfg
+++ b/templates/cfg/disk.cfg
@@ -3,7 +3,7 @@
 # automatically monitor any ebs volumes
 
 #---------Espace libre disk sda1--------------------
-Target[sda1]: `<%= mrtg_bin_dir %>/checkdisk sda1`
+Target[sda1]: `<%= mrtg_bin_dir %>/checkdisk.sh sda1`
 Options[sda1]: nopercent,growright,gauge,noinfo, nobanner
 MaxBytes[sda1]: 8423
 Unscaled[sda1]:dwmy
