--- a/templates/cfg/memory.cfg
+++ b/templates/cfg/memory.cfg
@@ -1,5 +1,5 @@
 #---------Memory--------------------
-Target[mem]: `<%= mrtg_bin_dir %>/mem`
+Target[mem]: `<%= mrtg_bin_dir %>/mem.sh`
 Options[mem]: nopercent,growright,gauge,noinfo, nobanner
 Unscaled[mem]:dwmy
 MaxBytes[mem]: 536387584
