--- a/templates/cfg/cpu.cfg
+++ b/templates/cfg/cpu.cfg
@@ -1,22 +1,22 @@
 # todo, decide on snmp or non snmp
 
-WorkDir: /var/www/mrtg
-LoadMIBs: /usr/share/snmp/mibs/UCD-SNMP-MIB.txt
-Target[localhost.cpu]:ssCpuRawUser.0&ssCpuRawUser.0:<%= community_name %>@127.0.0.1+ ssCpuRawSystem.0&ssCpuRawSystem.0:<%= community_name %>@127.0.0.1+ ssCpuRawNice.0&ssCpuRawNice.0:<%= community_name %>@127.0.0.1
-RouterUptime[localhost.cpu]: <%= community_name %>@127.0.0.1
-MaxBytes[localhost.cpu]: 100
-Title[localhost.cpu]: CPU Load
-PageTop[localhost.cpu]: <H1>Active CPU Load %</H1>
-Unscaled[localhost.cpu]: ymwd
-ShortLegend[localhost.cpu]: %
-YLegend[localhost.cpu]: CPU Utilization
-Legend1[localhost.cpu]: Active CPU in % (Load)
-Legend2[localhost.cpu]:
-Legend3[localhost.cpu]:
-Legend4[localhost.cpu]:
-LegendI[localhost.cpu]: Active
-LegendO[localhost.cpu]:
-Options[localhost.cpu]: growright,nopercent
+#WorkDir: /var/www/mrtg
+#LoadMIBs: /usr/share/snmp/mibs/UCD-SNMP-MIB.txt
+#Target[localhost.cpu]:ssCpuRawUser.0&ssCpuRawUser.0:<%= community_name %>@127.0.0.1+ ssCpuRawSystem.0&ssCpuRawSystem.0:<%= community_name %>@127.0.0.1+ ssCpuRawNice.0&ssCpuRawNice.0:<%= community_name %>@127.0.0.1
+#RouterUptime[localhost.cpu]: <%= community_name %>@127.0.0.1
+#MaxBytes[localhost.cpu]: 100
+#Title[localhost.cpu]: CPU Load
+#PageTop[localhost.cpu]: <H1>Active CPU Load %</H1>
+#Unscaled[localhost.cpu]: ymwd
+#ShortLegend[localhost.cpu]: %
+#YLegend[localhost.cpu]: CPU Utilization
+#Legend1[localhost.cpu]: Active CPU in % (Load)
+#Legend2[localhost.cpu]:
+#Legend3[localhost.cpu]:
+#Legend4[localhost.cpu]:
+#LegendI[localhost.cpu]: Active
+#LegendO[localhost.cpu]:
+#Options[localhost.cpu]: growright,nopercent
 
 #---------CPU-------------------
 Target[cpu]: `<%= mrtg_bin_dir %>/cpustat.pl`
