--- a/templates/cfg/uptime.cfg
+++ b/templates/cfg/uptime.cfg
@@ -1,7 +1,7 @@
 #---------uptime---------------------------
 #Target[uptime]: .1.3.6.1.4.1.2021.8.1.101.1&.1.3.6.1.4.1.2021.8.1.101.1:public@localhost
 Target[uptime]: `<%= mrtg_bin_dir %>/uptime.pl`
-Suppress[uptime]: d
+#Suppress[uptime]: d
 Options[uptime]: gauge,noinfo, nopercent, growright, nobanner, noi
 Title[uptime]: Uptime
 MaxBytes[uptime]: 1000000
