added pngdate option to all graphs

--- a/templates/cfg/apache.cfg
+++ b/templates/cfg/apache.cfg
@@ -1,6 +1,6 @@
 #---------Apache hits-----------------------
 Target[apache]: `<%= mrtg_bin_dir %>/webstat.pl hits`
-Options[apache]: perhour, nopercent, growright, noinfo, nobanner, noi
+Options[apache]: perhour, nopercent, growright, noinfo, nobanner, noi,pngdate
 MaxBytes[apache]: 1000000
 YLegend[apache]: hits/hour
 ShortLegend[apache]: per hour &nbsp;&nbsp; 
@@ -14,7 +14,7 @@ WithPeak[apache]: wmy
 
 #---------Apache traffic-----------------------
 Target[apache_bytes]: `<%= mrtg_bin_dir %>/webstat.pl bytes`
-Options[apache_bytes]: nopercent, growright, noinfo, nobanner, noi
+Options[apache_bytes]: nopercent, growright, noinfo, nobanner, noi, pngdate
 MaxBytes[apache_bytes]:16000 
 AbsMax[apache_bytes]:20000 
 YLegend[apache_bytes]: octets/s
