--- a/templates/cfg/cpu.cfg
+++ b/templates/cfg/cpu.cfg
@@ -20,7 +20,7 @@
 
 #---------CPU-------------------
 Target[cpu]: `<%= mrtg_bin_dir %>/cpustat.pl`
-Options[cpu]: nopercent,growright,gauge,noinfo, nobanner
+Options[cpu]: nopercent,growright,gauge,noinfo, nobanner,pngdate
 #Unscaled[cpu]:dwmy
 MaxBytes[cpu]: 100
 YLegend[cpu]: % CPU
