--- a/templates/cfg/disk.cfg
+++ b/templates/cfg/disk.cfg
@@ -4,7 +4,7 @@
 
 #---------Espace libre disk sda1--------------------
 Target[sda1]: `<%= mrtg_bin_dir %>/checkdisk.sh sda1`
-Options[sda1]: nopercent,growright,gauge,noinfo, nobanner
+Options[sda1]: nopercent,growright,gauge,noinfo, nobanner,pngdate
 MaxBytes[sda1]: 8423
 Unscaled[sda1]:dwmy
 kMG[sda1]:M,G,T,P
