--- a/templates/cfg/memory.cfg
+++ b/templates/cfg/memory.cfg
@@ -1,6 +1,6 @@
 #---------Memory--------------------
 Target[mem]: `<%= mrtg_bin_dir %>/mem.sh`
-Options[mem]: nopercent,growright,gauge,noinfo, nobanner
+Options[mem]: nopercent,growright,gauge,noinfo, nobanner,pngdate
 Unscaled[mem]:dwmy
 MaxBytes[mem]: 536387584
 Kilo[mem]:1024
