--- a/templates/cfg/network_interfaces.cfg
+++ b/templates/cfg/network_interfaces.cfg
@@ -1,6 +1,6 @@
 #-----Local Network by netstat----------------------
 Target[lan]: `<%= mrtg_bin_dir %>/netstat-ip.sh eth0 eth0`
-Options[lan]: nopercent,growright,noinfo,nobanner
+Options[lan]: nopercent,growright,noinfo,nobanner,pngdate
 MaxBytes[lan]: 12500000
 Kilo[lan]:1024
 Ylegend[lan]: octets/s
