--- a/templates/cfg/open_files.cfg
+++ b/templates/cfg/open_files.cfg
@@ -1,6 +1,6 @@
 #------ number of open files-----------
 Target[files]: `<%= mrtg_bin_dir %>/files.pl`
-Options[files]: gauge,noinfo, nopercent, growright, nobanner, noi
+Options[files]: gauge,noinfo, nopercent, growright, nobanner, noi, pngdate
 Title[files]: Files
 MaxBytes[files]: 1000000
 AbsMax[files]: 1000000
