--- a/templates/cfg/processes.cfg
+++ b/templates/cfg/processes.cfg
@@ -1,6 +1,6 @@
 #--------------Number of processes----------------
 Target[procs]: `<%= mrtg_bin_dir %>/stat.pl procs`
-Options[procs]: nopercent,growright,gauge,noinfo, nobanner, noi
+Options[procs]: nopercent,growright,gauge,noinfo, nobanner, noi, pngdate
 Title[procs]: Process
 MaxBytes[procs]: 1000000
 YLegend[procs]: Process
