--- a/templates/cfg/snmp_free_memory.cfg
+++ b/templates/cfg/snmp_free_memory.cfg
@@ -2,7 +2,7 @@ LoadMIBs: /usr/share/snmp/mibs/HOST-RESOURCES-MIB.txt
 Target[localhost.mem]: .1.3.6.1.4.1.2021.4.6.0&.1.3.6.1.4.1.2021.4.6.0:<%= community_name %>@localhost
 PageTop[localhost.mem]: <H1>Free Memory</H1>
 WorkDir: /var/www/mrtg
-Options[localhost.mem]: nopercent,growright,gauge,noinfo
+Options[localhost.mem]: nopercent,growright,gauge,noinfo,pngdate
 Title[localhost.mem]: Free Memory
 MaxBytes[localhost.mem]: 1000000
 kMG[localhost.mem]: k,M,G,T,P,X
