--- a/templates/cfg/uptime.cfg
+++ b/templates/cfg/uptime.cfg
@@ -2,7 +2,7 @@
 #Target[uptime]: .1.3.6.1.4.1.2021.8.1.101.1&.1.3.6.1.4.1.2021.8.1.101.1:public@localhost
 Target[uptime]: `<%= mrtg_bin_dir %>/uptime.pl`
 #Suppress[uptime]: d
-Options[uptime]: gauge,noinfo, nopercent, growright, nobanner, noi
+Options[uptime]: gauge,noinfo, nopercent, growright, nobanner, noi, pngdate
 Title[uptime]: Uptime
 MaxBytes[uptime]: 1000000
 YLegend[uptime]: days
