tweaks to language

--- a/templates/cfg/apache.cfg
+++ b/templates/cfg/apache.cfg
@@ -17,7 +17,7 @@ Target[apache_bytes]: `<%= mrtg_bin_dir %>/webstat.pl bytes`
 Options[apache_bytes]: nopercent, growright, noinfo, nobanner, noi, pngdate
 MaxBytes[apache_bytes]:16000 
 AbsMax[apache_bytes]:20000 
-YLegend[apache_bytes]: octets/s
+YLegend[apache_bytes]: bytes/s
 ShortLegend[apache_bytes]: o/s
 LegendO[apache_bytes]: Traffic Apache:
 Legend2[apache_bytes]: Traffic Apache
