--- a/templates/cfg/uptime.cfg
+++ b/templates/cfg/uptime.cfg
@@ -8,6 +8,6 @@ MaxBytes[uptime]: 1000000
 YLegend[uptime]: days
 ShortLegend[uptime]: days
 LegendO[uptime]: Uptime:
-Legend2[uptime]: Uptime in Linux-nonsense days
-PageTop[uptime]: <h1>Uptime in Linux-nonsense days</h1>
+Legend2[uptime]: Uptime in Linux days
+PageTop[uptime]: <h1>Uptime in Linux days</h1>
 #-------End uptime------------------------------
